base/deployment-service-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-deployment
  labels:
    app: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice
  template:
    metadata:
      labels:
        app: microservice
    spec:
      containers:
      - name: microservice
        image: github.com  
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: microservice-service
spec:
  ports:
    - port: 7004
      targetPort: 8080
  selector:
    app: microservice
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
  - host: url.com
    http:
      paths:
      - path: /microservice
        pathType: Prefix
        backend:
          service:
            name: microservice-service
            port:
              number: 80
