base/ovd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ovd-deployment
  labels:
    app: ovd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ovd
  template:
    metadata:
      labels:
        app: ovd
    spec:
      containers:
      - name: ovd
        image: github.com:latest  
        ports:
        - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: ovd-service
spec:
  ports:
    - port: 80
      targetPort: 7001
  selector:
    app: ovd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ovd-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx  
  rules:
  - host: github.com
    http:
      paths:
      - path: /ovd
        pathType: Prefix
        backend:
          service:
            name: ovd-service
            port:
              number: 80
